test/files/neg/report-deprecated-error.check
report-deprecated-error.scala:10: error: method <<= in object syntax is unsupported (since foo-lib 1.0): use := syntax instead
  <<=()
  ^
one error found
